--- a/Gallery/app/src/main/res/layout/image_screen.xml
+++ b/Gallery/app/src/main/res/layout/image_screen.xml
@@ -25,4 +25,17 @@
         android:background="@drawable/custom_button"
         android:src="@drawable/ic_more"
         app:layout_constraintVertical_bias="0.529" />
+
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_7sdp"
+        android:layout_marginLeft="@dimen/_7sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/custom_button"
+        android:src="@drawable/ic_back_2"
+        />
 </RelativeLayout>
