--- a/Gallery/app/src/main/res/layout/by_date_activity.xml
+++ b/Gallery/app/src/main/res/layout/by_date_activity.xml
@@ -40,9 +40,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        >
+
         <include
-            layout="@layout/list_row_group"/>
+            layout="@layout/list_row_group"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
