--- a/Gallery/app/src/main/res/layout/activity_video_details_screen.xml
+++ b/Gallery/app/src/main/res/layout/activity_video_details_screen.xml
@@ -8,7 +8,7 @@
     android:background="@color/black">
 
     <ImageButton
-        android:id="@+id/btnBack"
+        android:id="@+id/btnBackDVV"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
         android:layout_alignParentEnd="true"
@@ -21,13 +21,13 @@
         android:layout_marginLeft="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_16sdp"/>
     <TextView
-        android:id="@+id/details_"
+        android:id="@+id/details_DVV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Details"
         android:textColor="@color/white"
         android:textSize="@dimen/_20sdp"
-        app:layout_constraintStart_toEndOf="@+id/btnBack"
+        app:layout_constraintStart_toEndOf="@+id/btnBackDVV"
         android:layout_marginLeft="@dimen/_10sdp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_17sdp"
@@ -40,18 +40,18 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginLeft="@dimen/_25sdp"
         android:src="@drawable/ic_calendar"
-        app:layout_constraintTop_toBottomOf="@+id/btnBack"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackDVV"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"></ImageView>
 
     <TextView
-        android:id="@+id/create_date"
+        android:id="@+id/create_date_DVV"
         android:text="dddd"
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/cale"
-        app:layout_constraintTop_toBottomOf="@id/btnBack"
+        app:layout_constraintTop_toBottomOf="@id/btnBackDVV"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_23sdp"
         tools:ignore="MissingConstraints"></TextView>
@@ -68,29 +68,28 @@
         ></ImageView>
 
     <TextView
-        android:id="@+id/file_name_tv"
+        android:id="@+id/file_name_tv_DVV"
         android:text="ddddddddd"
         android:textColor="@color/white"
-        android:layout_width="@dimen/_200sdp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/create_date"
+        app:layout_constraintTop_toBottomOf="@+id/create_date_DVV"
         android:layout_marginTop="@dimen/_27sdp"
         android:layout_marginLeft="@dimen/_10sdp"
-        android:inputType="textMultiLine"
         app:layout_constraintStart_toEndOf="@id/pic"></TextView>
 
     <TextView
-        android:id="@+id/path_file_tv"
+        android:id="@+id/path_file_tv_DVV"
         android:layout_width="@dimen/_200sdp"
         android:textColor="@color/white"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
         android:text="dddddd"
         android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/file_name_tv"
+        app:layout_constraintTop_toBottomOf="@+id/file_name_tv_DVV"
         android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintStart_toStartOf="@id/file_name_tv"
+        app:layout_constraintStart_toStartOf="@id/file_name_tv_DVV"
         ></TextView>
 
     <TextView
@@ -100,20 +99,28 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/path_file_tv"
+        app:layout_constraintTop_toBottomOf="@+id/path_file_tv_DVV"
         android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintStart_toStartOf="@id/file_name_tv"></TextView>
-
-
+        app:layout_constraintStart_toStartOf="@id/file_name_tv_DVV"></TextView>
+    <TextView
+        android:id="@+id/length"
+        android:text="zzzzzzz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toBottomOf="@+id/size"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="@id/file_name_tv_DVV"></TextView>
 
     <TextView
-        android:id="@+id/width_heigh"
+        android:id="@+id/width_heigh_DVV"
         android:text="sdsdsds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/path_file_tv"
+        app:layout_constraintTop_toBottomOf="@+id/path_file_tv_DVV"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginLeft="@dimen/_100sdp"
         app:layout_constraintStart_toEndOf="@id/size"></TextView>
