--- a/Gallery/app/src/main/res/menu/setting_video_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_video_view.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/delete_vid"
         android:title="@string/delete_pic"/>
+    <item android:id="@+id/copy_vid"
+        android:title="Copy"/>
     <item android:id="@+id/details_vid"
         android:title="@string/details"/>
 </menu>
