--- a/Gallery/app/src/main/res/menu/setting_img_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_img_view.xml
@@ -6,6 +6,8 @@
         android:title="Copy"/>
     <item android:id="@+id/setWall"
         android:title="@string/set_as_wallpaper"/>
+    <item android:id="@+id/share"
+        android:title="Share"/>
     <item android:id="@+id/details"
         android:title="@string/details"/>
 </menu>
