--- a/Gallery/app/src/main/res/menu/setting_img_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_img_view.xml
@@ -8,6 +8,8 @@
         android:title="@string/set_as_wallpaper"/>
     <item android:id="@+id/share"
         android:title="Share"/>
+    <item android:id="@+id/edit"
+        android:title="Edit image"/>
     <item android:id="@+id/details"
         android:title="@string/details"/>
 </menu>
