--- a/Gallery/app/src/main/res/menu/setting_for_image_only.xml
+++ b/Gallery/app/src/main/res/menu/setting_for_image_only.xml
@@ -5,7 +5,10 @@
         android:title="@string/view_by_date"/>
     <item android:id="@+id/change_to_by_people"
         android:title="View by people"/>
-
+    <item android:id="@+id/change_linear_layout"
+        android:title="Change to Linear layout"/>
+    <item android:id="@+id/change_grid_layout"
+        android:title="Change to Grid layout"/>
     <item android:id="@+id/setting"
         android:title="@string/settings"/>
 </menu>
