--- a/Gallery/app/src/main/res/layout/image_screen.xml
+++ b/Gallery/app/src/main/res/layout/image_screen.xml
@@ -38,4 +38,15 @@
         android:background="@drawable/custom_button"
         android:src="@drawable/ic_back_2"
         />
+
+    <ImageButton
+        android:id="@+id/btnFavorite"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/custom_button"
+        android:src="@drawable/btn_favorite" />
 </RelativeLayout>
